kubernetes/stirling-pdf/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: stirling-pdf
    app.kubernetes.io/name: stirling-pdf
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: stirling-pdf
      app.kubernetes.io/name: stirling-pdf
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: stirling-pdf
        app.kubernetes.io/name: stirling-pdf
    spec:
      containers:
        - name: stirling-pdf
          image: docker.io/stirlingtools/stirling-pdf:3.0.0
          command: ["/bin/bash", "/custom/stirling-init.sh"]
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /configs
              name: configs
            - mountPath: /logs
              name: logs
            - mountPath: /customFiles
              name: custom-files
            - mountPath: /pipeline
              name: pipeline
            - mountPath: /tmp
              name: tmp
            - mountPath: /custom
              name: init-script
      securityContext:
        runAsNonRoot: true
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: configs
          persistentVolumeClaim:
            claimName: stirling-pdf-configs
        - name: logs
          emptyDir: {}
        - name: custom-files
          emptyDir: {}
        - name: pipeline
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: init-script
          configMap:
            name: stirling-pdf-init
            defaultMode: 0755
