kubernetes/stirling-pdf/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: stirling-pdf
    app.kubernetes.io/name: stirling-pdf
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: stirling-pdf
    app.kubernetes.io/name: stirling-pdf
  type: ClusterIP
