kubernetes/stirling-pdf/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: stirling-pdf
    app.kubernetes.io/name: stirling-pdf
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  host: stirling-pdf.apps.okd.claffey.cloud
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: stirling-pdf
    weight: 100
  wildcardPolicy: None
